Module A: implement facilities and assets catalogue backend